<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="7dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/customerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer" />

            <EditText
                android:id="@+id/customerEdt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/courtDateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/court_date" />

            <EditText
                android:id="@+id/courtDateEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                />

            <EditText
                android:id="@+id/courtTimeEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/trailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial_title" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/selectType1"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Trial" />

            <Spinner
                android:id="@+id/selectType2"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Trial" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/selectTrial1"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/selectTrial2"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/additionSpinnersView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/selectTrial3"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/selectTrial4"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:gravity="clip_vertical"
            >

            <TextView
                android:id="@+id/proposalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proposal" />

            <EditText
                android:id="@+id/proposalDateEdt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/proposalTimeEdt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:weightSum="3"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priorities" 
                android:layout_weight="2"/>

            <Spinner
                android:id="@+id/prioritySpinner"
                style="@style/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/priorities" 
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

<!--             <Spinner
                android:id="@+id/soundSpinner"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
 -->
             <Button
                android:id="@+id/soundBtn"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sound" />
            
            <Spinner
                android:id="@+id/remindSpinner"
                style="@style/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/reminder_update_time_entries" />
        </LinearLayout>

        <TextView
            android:id="@+id/notesTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/notesEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_hint" />

        <!--
        <Spinner
            android:id="@+id/selectTrial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Select Trial"
            android:entries="@array/trial_types"
            />


        <TextView
                android:id="@+id/proposalDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                />
        <EditText
                android:id="@+id/proposalDateEdt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deadline_hint"
                />
        <TextView
                android:id="@+id/notesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                />
        <EditText
                android:id="@+id/notesEdt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_hint"
                />
        -->
    </LinearLayout>

</ScrollView>